# DevOpsDip

./: FizzBuzz.py  conflict.txt
Dynamite/: README.md  shopping.py  shopping2.py
Dynamite/Calculator/: calc.py  filecalc.py
Dynamite/Control_Flow/: break.py  elif.py  ex5_1.py  ex5_2.py  ex5_3.py  ex5_4.py  ex5_5.py  ex5_6.py  ex5_7.py  for.py  range.py  weather.py
Dynamite/Control_Flow/importing/: example_module.py  main.py
Dynamite/Control_Flow/importing/package/: module1.py  module2.py  pyproject.toml
Dynamite/Control_Flow/importing/package2/: my_module.py
Dynamite/Control_Flow/importing/poetry-demo/: pyproject.toml
Dynamite/Functions/: Basic.py  ex4.py  ex4_4.py  ex4_5.py  ex4_6.py  ex4_7.py  test_script.py
Dynamite/game/: adventure.py  ex6.py
