[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Ashley Bamber <bambera74@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
